fix broken layout

--- a/src/features/user/Settings/EditProfile/EditProfile.module.scss
+++ b/src/features/user/Settings/EditProfile/EditProfile.module.scss
@@ -137,9 +137,9 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
 }
 .formFieldHalf {
-  margin-top: 24px;
   display: flex;
   flex-direction: column;
   width: 100%;
